apps/copyparty/components/tls/patch-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: copyparty
spec:
  template:
    spec:
      volumes:
        - name: tls
          secret:
            secretName: copyparty-tls
            items:
              - key: tls-combined.pem
                path: cert.pem
