apps/copyparty/components/tls/patch-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: copyparty
spec:
  ports:
    - name: https
      port: 3923
      targetPort: http
